# smdb

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
include/: Makefile.am  Makefile.in  smdb-bcache.h  smdb-btypes.h  smdb-cfile.h  smdb-consts.h  smdb-dbfile.h  smdb-exiface.h  smdb-globals.h  smdb-incl.h  smdb-journal.h  smdb-lib.h  smdb-lists.h  smdb-macros.h  smdb-string.h  smdb-types.h  smdb-utils.h
man/: Makefile.am  Makefile.in  mkpages.sh  smdb-lib.html  smdb.3  smdb.html  smdb.ps  smdb.txt
src/: Makefile.am  Makefile.in  smdb-bcache.c  smdb-cfile.c  smdb-dbfile.c  smdb-globals.c  smdb-journal.c  smdb-string.c  smdb-utils.c
test/: Makefile.am  Makefile.in  smdb-config.h  smdb-test.c  smdb-xif-posix.c  smdb-xif-posix.h
